--- a/app/src/main/res/layout/activity_atendimento.xml
+++ b/app/src/main/res/layout/activity_atendimento.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AtendimentoActivity">
+    tools:context="br.com.sgap.ui.activity.AtendimentoActivity">
 
     <LinearLayout
 
