--- a/app/src/main/res/layout/activity_grava_atendimentos.xml
+++ b/app/src/main/res/layout/activity_grava_atendimentos.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".GravaAtendimentosActivity">
+    tools:context="br.com.sgap.ui.activity.GravaAtendimentosActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
