--- a/app/src/main/res/layout/activity_pacientes.xml
+++ b/app/src/main/res/layout/activity_pacientes.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PacientesActivity">
+    tools:context="br.com.sgap.ui.activity.PacientesActivity">
     <LinearLayout
 
         android:id="@+id/linearLayout1"
