--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="azul">#4F47EE</color>
+    <color name="azul_escuro">#020024</color>
+    <color name="vermelho">#FF0000</color>
 </resources>
